frontend/core/src/main/webapp/static/less/layout.less
@import "foundation.less";
@import "inputs.less";

/*
<h1 class="main-heading">Layout</h1>

TODO: em grid structure explained in plain English (when new grid structure decided!)
*/
@height-column-max: 1025px;
@width-column-max: 768px; // iPhone 5 landscape is still one column

@width-menu: 260px;

/*
**************************************************************************
# LEVEL 1: Root
*/

.container-root {
  width: 100%;
  height: 100%;
}

// 1. Set width and height for absolutely positioned (grand)children.
// 2. Must set position to relative for correct width during transitions. Otherwise page would scroll horizontally.
.container-root--inner {
  height: 100%; // [1]
  width: 100%;  // [1]
  position: relative; // [2]
}

/*
**************************************************************************
# LEVEL 2: Optional Intermediate Containers (main, drawer-aisle)
*/

// 1. Inherit width and height for absolutely positioned (grand)children.
.container-main,
.container-drawer-aisle, .container-drawer-aisle--inner {
  width: inherit;   // [1]
  height: inherit;  // [1]
}

// 1. Hide - but do not collapse - menu when editor is open.
// 2. Hide editor when it is not open.
.container-main {
  &.editor-show .container-menu {
    visibility: hidden; // [1]
  }
  &:not(.editor-show) .container-editor {
    display: none;  // [2]
  }
}

// 1. Minimize paint when editor is open and .container-master and .container-menu are stacked beneath.
//    At least absolutely positioned elements inside these classes would repaint and slow down swiping in
//    editor swiper. NOTE: "overflow: hidden" causes flicker in vertical swiper (focus/tasks), but without
//    it, performance is degraded noticably
.editor-visible {
  .container-master, .container-master *,
  .container-menu, .container-menu * {
    pointer-events: none; // [1]
    overflow: hidden;     // [1]
  }
}

// 1. .container-drawer-aisle must have a background in order to hide .container-menu and .container-editor.
.container-drawer-aisle {
  position: absolute;       // [1]
  background-color: white;  // [1]
}

/*
**************************************************************************
# LEVEL 3: Primary Containers (master, editor, menu, modal)
*/

// 1. Layout for Snap.js. See https://github.com/jakiestfu/Snap.js/#layout
// 2. Inherit height to expand vertically and for (grand)children as well.
.container-menu,
.container-master,
.container-editor {
  position: absolute; // [1]
  height: inherit;    // [2]
}

// 1. Intermediate div needs height to work
.container-editor--inner__outer,
.container-editor--inner {
  height: inherit;    // [1]
}

// 1. Maximum height is set programmatically - set default maximum height here as well for reference.
.container-master,
.container-editor {
  max-height: @height-column-max;  // [1]
}

/*
Menu
*/

@height-menu-footer: @grid-vertical-medium * 2 + @margin-bottom-heading + @padding-vertically-centered;
// 1. Use native-style scrolling in WebKit browsers
.container-menu {
  -webkit-overflow-scrolling: touch;  // [1]
  width: @width-menu;
  overflow-y: auto;
  height: 100%;
  background-color: @color-background-menu;
}

// 1. Sticky footer, margin-bottom is the negative value of the footer's height.
// 2. Set margin-top for first-child of .container-menu to align vertically with toolbar.
// 3. Center vertically.
// 4. Increase click area with padding-bottom.
//    NOTE: Can't be more than 5px because vertical position of .separate depends on this.
.container-menu--top {
  min-height: 100%;
  margin: 0 auto -@height-menu-footer;  // [1]
  .separate {
    // use this to separate link elements from other
    line-height: 84px;
    padding-bottom: 6px;
    span {
      line-height: inherit;
    }
  }
  .link-menu:first-child {
    margin-top: @margin-top-heading;            // [2]
    padding-top: @padding-vertically-centered;  // [3]
    padding-bottom: 5px;                        // [4]
  }
  .link-menu-small {
    line-height: @grid-vertical;
  }
}

.container-menu--bottom, .container-menu--push {
  height: @height-menu-footer;
}

.container-menu--bottom {
  .link-menu {
    line-height: @grid-vertical-medium;
  }
  .link-menu:last-child {
    margin-bottom: @margin-bottom-heading;
    padding-bottom: @padding-vertically-centered;  // [3]
  }
}

// 1. Center vertically. See http://css-tricks.com/centering-css-complete-guide/#vertical-block-known
// 2. Set default max-height
// 3. Set white background to hide stuff below.
.container-modal {
  position: absolute;                   // [1]
  top: 50%;                             // [1]
  -webkit-transform: translateY(-50%);  // [1]
  -moz-transform: translateY(-50%);     // [1]
  -o-transform: translateY(-50%);       // [1]
  -ms-transform: translateY(-50%);      // [1]
  transform: translateY(-50%);          // [1]
  width: 100%;
  .center-horizontally-absolute();
  background-color: white;  // [3]
  .container-content {
    height: auto;
    max-height: 60vh; // [2]
  }
}

@large-screen-width-modal: 350px;
@large-screen-height-modal: 400px;

/*
Vertically center .container-master and .container-editor in large screens
*/
// 1. Set maximum dimensions for modal.
@media (min-height: @height-column-max) {
  .container-master,
  .container-editor {
    margin-top: -@height-column-max / 2;
    top: 50%;
  }
  .container-modal {
    max-height: @large-screen-height-modal; // [1]
  }
}

@media (min-width: @width-column-max) {
  .container-modal {
    max-width: @large-screen-width-modal;   // [1]
  }
}
/* ... */

